### Added
- Added the protein start and end positions to ions and peptides report.
- ProtXML reading parallelization.
- Added a new Extended Peptide column to the PSM report containing the flanking regions of peptides.
- Group-based FDR scoring capabilities that will rely on the fdr_group passed by MSFragger.

### Changed
- Rolled back the FASTA header checking for IonQuant.
- Improved the FASTA header detection and parsing.
- PTMProphet was updated to v6.2.0.
- The processing speed, including IO operations and database reading received a major upgrade (@guoci).
- The purity column will always be visible in the PSM table.
- Updated the MSstats report for individual data sets.

### Fixed
- Updated razor mapping rules to reinforce classifying decoy razor proteins.
- Fixed a problem where protein names and genes would not be tagged with the decoy tag.